tests/baselines/reference/iterableArrayPattern20(strict=true).errors.txt
iterableArrayPattern20.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
iterableArrayPattern20.ts(2,25): error TS7008: Member 'y' implicitly has an 'any' type.


==== iterableArrayPattern20.ts (2 errors) ====
    class Bar { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo extends Bar { y }
                            ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    class FooArrayIterator {
        next() {
            return {
                value: [new Foo],
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun(...[[a = new Foo], b = [new Foo]]: Bar[][]) { }
    fun(...new FooArrayIterator);